fixed alignment issue

--- a/week2/project2/commerce/auctions/static/auctions/styles.scss
+++ b/week2/project2/commerce/auctions/static/auctions/styles.scss
@@ -30,11 +30,21 @@
 }
 
 #active-listings {
-    .row{
+    .row {
         display: flex;
-        flex: 1;
         justify-content: center;
         align-items: center;
+        #img-holder {
+            height: 120px;
+            width: 100px;
+            display: flex;
+            margin: auto;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain;
+            }
+        }
     }
 }
 
